--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     font-weight: bold;
     line-height: 80px;
     color:#5C69E7;
-    text-align: center;}
+}
 
 .page {
     max-width: 600px;
@@ -42,22 +42,42 @@
     color:white;}
 
 ul{list-style-type: none;
-  border:0px solid#ECEAFF; 
-border-radius:10px;}
+    display:inline-block;
+    border:0px ; 
+    border-radius:30px;
+    background-color: white;
+    }
 
 li{list-style-type: none;
-    color: white;
+    color: #363479;
     display: inline-block;}
 
 .day-time{color: #7A79B9;
     text-align: center;
     font-size: 20px;
-    text-align: center;}
+    text-align: center;
+    margin-top: -15px;}
 
 #condition{
     color:#434280;
 font-size: 20px;}
 
 #icon{font-size: 80px;
-    text-align: center;}
+     padding-top: 40px;
+     height:  20px;}
+
+.temp-condition{
+    text-align:center;
+    position:relative;
+}
+
+#condition{
+ text-align: center;
+ position: relative;
+ top: -10px;
+ left: 30px;
+}
+.weather-list{
+
+}
 
