--- a/styles.css
+++ b/styles.css
@@ -42,26 +42,27 @@
     color:white;}
 
 ul{list-style-type: none;
-    display:inline-block;
     border:0px ; 
     border-radius:30px;
     background-color: white;
+    padding: 15px 5px;
+    padding-top: 5px;
+    line-height: 23px;
+    margin-right: 150px;
+    margin-left:150px;
     }
 
 li{list-style-type: none;
     color: #363479;
-    display: inline-block;}
+    display: inline-block;
+    margin-left: 60px;}
 
 .day-time{color: #7A79B9;
     text-align: center;
     font-size: 20px;
     text-align: center;
     margin-top: -15px;}
-
-#condition{
-    color:#434280;
-font-size: 20px;}
-
+    
 #icon{font-size: 80px;
      padding-top: 40px;
      height:  20px;}
@@ -74,10 +75,12 @@ font-size: 20px;}
 #condition{
  text-align: center;
  position: relative;
+ color: #434280;
+ font-size: 20px;
  top: -10px;
- left: 30px;
+ left: 10px;
 }
-.weather-list{
 
-}
+
+
 
