--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     padding: 20px 280px 20px 10px;
     border: 1px solid #d5e1e2;
     border-radius: 6px;
-    color:white;}
+    }
 
 ::placeholder {
     font-size: 16px;
@@ -80,6 +80,9 @@ li{list-style-type: none;
  top: -10px;
  left: 10px;
 }
+
+input[type=text] {
+    color: black;}
 
 
 
