Added API intergration

--- a/styles.css
+++ b/styles.css
@@ -100,9 +100,8 @@ li{list-style-type: none;
 #weather-image{margin-left: -6px;}
 
 .weather-forecast-day {
-    margin: 30px;
-    text-align: center;
-    }
+    margin: 38px;
+    text-align: center;}
 
 
 
