--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@
     padding: 20px;
     border-radius: 6px;
     border: 0px;
-    background: #759aec;}
+    background: #759aec;
+    }
 
 #footer {
     padding: 50px 0px 30px 0px;
@@ -95,14 +96,30 @@ li{list-style-type: none;
     opacity:0.5
 }
 .temperature-max{
-    font-size: 13px;
-}
+    font-size: 13px;}
+
 #weather-image{margin-left: -6px;}
 
 .weather-forecast-day {
-    margin: 38px;
+    margin: 28px;
     text-align: center;}
 
+.weather-forecast-day {
+    border: 1px solid #F8F9FA;
+    background-color: #F8F9FA;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;}
+
+.weather-forecast-day:hover {
+    cursor: pointer;
+  background-color: white;
+}
+.weather-list:hover{
+    cursor:pointer;
+    background-color: white;
+
+}
 
 
 
